--- a/css/styles.css
+++ b/css/styles.css
@@ -1,37 +1,76 @@
-body {
-    ;
-}
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-.navLogo {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 800px;
+body {
+    height: 100vh;
+    background-image:
+    linear-gradient(to bottom, rgba(36, 36, 36, 0.52), rgba(0, 0, 0, 0.73)),
+    url('../images/pexels-royal-anwar-450214.jpg');
+    background-size: cover;
+
 }
 
-.nav {
-    display: inline;
-    font-family: 'Poppins', sans-serif;
-    list-style: none;
+.navBar {
+    background-color: aliceblue;
 }
 
-.header {
-    background-color: #27374D;
-    opacity: 60%;
+.logoHead {
+    font-family: 'Poppins', sans-serif;
+    font-size: 30px;
+    font-weight: 800;
     color: white;
-}
-
-ul {
-    float: right;
+    padding-left: 30px;
+    padding-top: 20px;
+    background-color: #394867;
 }
 
 h1 {
-    background-color: #526D82;
-    display: inline-block;
-    height: 100px;
-    width: 50;
+    color: #ffffff;
+    font-family: 'Poppins' , sans-serif;
+    font-weight: 400;
+    font-size: 60px;
+}
+
+h2 {
+    color: #c0c0c0;
+    font-family: 'Poppins' , sans-serif;
+    font-weight: 100;
+    font-style: italic;
+    font-size: 30px;
+
+}
+
+li {
+    display: inline;
+    font-family: 'Poppins', sans-serif;
+    padding-right: 50px;
+    padding-top: 30px;
+    float: right;
+
+}
+
+.logo {
+    float: left;
+}
+
+ul {
+}
+
+.header_headings {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    font-size: x-large;
+}
+
+a {
+    text-decoration: none;
+    color: white;
 }
