--- a/css/styles.css
+++ b/css/styles.css
@@ -1,73 +1,126 @@
-* {
+/* 
+CSS SPECIFICITY > WHICH CODE WILL BE GIVEN IMPORTANCE
+1. ORDER
+2. Embedded vs External Stylesheet (Embedded wins)
+*/
+
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body {
-    height: 100vh;
-    background-image:
-    linear-gradient(to bottom, rgba(36, 36, 36, 0.52), rgba(0, 0, 0, 0.73)),
-    url('../images/pexels-royal-anwar-450214.jpg');
-    background-size: cover;
+/*ELEMENT SELECTORS - GENERAL STYLINGS*/
 
-}
-
-.navBar {
-    background-color: aliceblue;
-}
-
-.logoHead {
+body{   
+    /* background-color: orangered; */
     font-family: 'Poppins', sans-serif;
-    font-size: 30px;
-    font-weight: 800;
-    color: white;
-    padding-left: 30px;
-    padding-top: 20px;
-    background-color: #394867;
+} 
+
+header{
+    /* background-color: green; */
 }
 
-h1 {
-    color: #ffffff;
-    font-family: 'Poppins' , sans-serif;
-    font-weight: 400;
-    font-size: 60px;
+
+
+h1{
+    /* display: inline-block; */
+    /* background-color: pink;
+    color: red;
+    padding: 20px;   
+    height: 100px;
+    width: 200px; */
 }
 
-h2 {
-    color: #c0c0c0;
-    font-family: 'Poppins' , sans-serif;
-    font-weight: 100;
-    font-style: italic;
-    font-size: 30px;
-
+ul{
+    /* background-color: brown; */
 }
 
 li {
-    display: inline;
-    font-family: 'Poppins', sans-serif;
-    padding-right: 50px;
-    padding-top: 30px;
-    float: right;
-
-}
-
-.logo {
-    float: left;
-}
-
-.header_headings {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    font-family: 'Poppins', sans-serif;
-    font-size: x-large;
+    /* background-color: lightgoldenrodyellow; */
 }
 
 a {
     text-decoration: none;
-    color: white;
+}
+
+/* CUSTOM CLASSNAME SELECTORS*/
+
+.header{
+  position: relative;
+  height: 100vh;
+  background-image: linear-gradient(to bottom, rgba(36, 36, 36, 0.52), rgba(48, 46, 51, 0.73)), url('../images/pexels-royal-anwar-450214.jpg');
+  background-size: cover;
+}
+
+.header__brand {
+    color: #fff;
+    font-size: 50px;
+    font-weight: 800; 
+}
+
+.header__brand-span {
+    color: black;
+}
+
+/*
+Examples:
+spaces > ul li {}
+child selector : ul > li
+adjacent sibling
+general sibling
+
+*/
+
+/***************************** HEADER SECTION ***************************/
+
+.header__nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 3% 7%;
+}
+
+.header__ul {
+    /* float: right; */
+}
+
+.header__nav ul li {
+    /* background-color: #394867; */
+    display: inline-block;
+    margin: 10px 20px;
+    /* padding-right: 35px; */
+}
+
+.header__nav ul li a {
+    color: #fff;
+    font-size: 20px;
+    font-weight: 400;
+
+}
+
+/* .header__nav a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 50px;
+    font-weight: 800;
+
+} */
+
+.header__headings{
+   position: absolute;
+    /* background-color: green; */
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+}
+
+.header__headings-h1 {
+    font-size: 60px;
+}
+
+.header__headings-h2 {
+    font-size: 30px;
+    font-weight: 200;
 }
