--- a/css/styles.css
+++ b/css/styles.css
@@ -19,23 +19,6 @@ a {
 
 /* CUSTOM CLASSNAME SELECTORS*/
 
-.header{
-  position: relative;
-  height: 100vh;
-  background-image: linear-gradient(to bottom, rgba(36, 36, 36, 0.52), rgba(48, 46, 51, 0.73)), url('../images/pexels-royal-anwar-450214.jpg');
-  background-size: cover;
-}
-
-.header__brand {
-    color: #fff;
-    font-size: 50px;
-    font-weight: 800; 
-}
-
-.header__brand-span {
-    color: black;
-}
-
 /*
 Examples:
 spaces > ul li {}
@@ -45,14 +28,32 @@ general sibling
 
 */
 
-/***************************** HEADER SECTION ***************************/
+/******************************************** HEADER SECTION ******************************************/
+
+
+.header{
+    position: relative;
+    height: 100vh;
+    background-image: linear-gradient(to bottom, rgba(36, 36, 36, 0.52), rgba(48, 46, 51, 0.73)), url('../images/pexels-royal-anwar-450214.jpg');
+    background-size: cover;
+  }
+  
+.header__brand {
+      color: #fff;
+      font-size: 50px;
+      font-weight: 800; 
+  }
+  
+.header__brand-span {
+      color: black;
+  }
 
 .header__nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 3% 7%;
-    background-color: rgba(36, 35, 35, 0.376);
+    padding: 1% 4%;
+    background-color: rgba(36, 35, 35, 0.548);
 }
 
 .header__ul {
@@ -99,9 +100,13 @@ general sibling
     font-weight: 200;
 }
 
+
+
+/******************************************** ABOUT SECTION ******************************************/
+
 .about {
-    height: 75vh;
-    background-color: gray;
+    height: 60vh;
+    background-color: rgb(36, 35, 35);
     color: white;
 }
 
