--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ general sibling
 .header{
     position: relative;
     height: 100vh;
-    background-image: linear-gradient(to bottom, rgba(36, 36, 36, 0.52), rgba(48, 46, 51, 0.73)), url('../images/pexels-royal-anwar-450214.jpg');
+    background-image: linear-gradient(to bottom, rgba(36, 36, 36, 0.52), rgba(48, 46, 51, 0.73)), url('../images/mine.jpg');
     background-size: cover;
   }
   
