--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ general sibling
 .header{
     position: relative;
     height: 100vh;
-    background-image: linear-gradient(to bottom, rgba(36, 36, 36, 0.52), rgba(48, 46, 51, 0.73)), url('../images/mine.jpg');
+    background-image: linear-gradient(to bottom, rgba(36, 36, 36, 0.52), rgba(48, 46, 51, 0.73)), url('https://github.com/KodeGoBootcamp-Projects/PF-Exercise_Images/blob/main/mine.jpg?raw=true');
     background-size: cover;
   }
   
@@ -56,9 +56,6 @@ general sibling
     background-color: rgba(36, 35, 35, 0.548);
 }
 
-.header__ul {
-    /* float: right; */
-}
 
 .header__nav ul li {
     /* background-color: #394867; */
